[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fabric-utils-extended"
version = "0.1.0"
description = "Extended Fabric Connection class with additional utilities"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Giles Thomas", email = "giles@giles.net"},
]
keywords = ["fabric", "ssh", "deployment", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "fabric>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/gpjt/fabric-utils-extended"
Repository = "https://github.com/gpjt/fabric-utils-extended"
Issues = "https://github.com/gpjt/fabric-utils-extended/issues"
